syntax = "proto3";

option java_multiple_files = true;
option java_package = "anbrain.qa.rococo.grpc";
option java_outer_classname = "UserdataProto";

service Userdata {
  rpc GetUser (UserRequest) returns (UserResponse) {}
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse) {}
}

message UserRequest {
  string username = 1;
}

message UserResponse {
  string id = 1;
  string username = 2;
  string firstname = 3;
  string lastname = 4;
  string avatar = 5;
}

message UpdateUserRequest {
  string username = 1;
  string firstname = 2;
  string lastname = 3;
  string avatar = 4;
}